<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/no_wifi"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_check_internet"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <Button
        android:text="@string/retry"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/btn_retry"
        />

</LinearLayout>