<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/url_website"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="64dp"
                android:hint="@string/enter_url"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:maxLines="1"/>

            <RelativeLayout
                android:id="@+id/rel_post_fileds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/url_website">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Define Header Method : "
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/headermethodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="24dp"
                    android:layout_toRightOf="@+id/textView"
                    android:entries="@array/HttpMethodes" />

                <EditText
                    android:id="@+id/headerRequest"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="24dp"
                    android:hint="Enter Rest of URl"
                    android:textColorHint="@color/black"
                    android:visibility="visible"
                    android:maxLines="1"/>

                <LinearLayout
                    android:id="@+id/linear_post_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/key_parmater"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/key"
                        android:maxLines="1"
                        android:textColorHint="@color/black"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/value_parmater"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_value"
                        android:maxLines="1"
                        android:textColorHint="@color/black" />

                    <Button
                        android:id="@+id/addvalues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/add_values" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayoutbtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_post_fileds"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_addrequest"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/addrequest" />

                <Button
                    android:id="@+id/btn_checkResults"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/checkresults" />

            </LinearLayout>

            <TextView
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayoutbtns"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:visibility="gone" />

            <Button
                android:id="@+id/next_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/results"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/next_request"
                android:visibility="gone" />


        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>